--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   box-sizing: border-box;
 }
 
@@ -43,4 +43,35 @@ main {
 h1 {
   font-weight: bold;
   font-size: 1.5rem;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+header {
+  background-color: whitesmoke;
+  height: 75px;
+  padding: 0px 16px 0px 12px;
+}
+nav {
+  margin: 1px;
+}
+header nav ul {
+  padding: 25px;
+}
+
+header nav ul li {
+  display: inline;
+  padding: 8px 35px;
+}
+header nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  
+}
+.pinkbg {
+  background-color: rgb(197, 57, 81);
+  border: 2px solid black;
 }
