--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,9 @@ h1 {
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Fira Sans', sans-serif;
 }
+
 header {
   background-color: whitesmoke;
   height: 75px;
@@ -58,7 +60,7 @@ nav {
   margin: 1px;
 }
 header nav ul {
-  padding: 25px;
+  padding: 24px;
 }
 
 header nav ul li {
@@ -69,9 +71,50 @@ header nav a {
   color: black;
   text-decoration: none;
   font-size: 18px;
-  
 }
 .pinkbg {
-  background-color: rgb(197, 57, 81);
-  border: 2px solid black;
+  background-color: #ffc0c7;
+  border-radius: 25px;
+  margin-right: 8px;
+  padding: 8px 16px;
+  box-sizing: inherit;
+  /* display: block; */
+  /* box-sizing: border-box  ; */
+}
+
+.first {
+  background-color: #282a35;
+  height: 90vh;
+  padding: 0px 90px;
+}
+.second {
+  background-color: #d0eee1;
+  height: 90vh;
+  padding: 0px 90px;
+}
+
+.topic {
+  font-size: 100px;
+}
+
+h1 {
+  font-size: 65px;
+  color: whitesmoke;
+  text-align: center;
+  position: relative;
+  top: 100px;
+}
+
+.pink1 {
+  color: #ffc0c7;
+  font-size: 22px;
+  position: relative;
+  top: 126px;
+  text-align: center;
+}
+
+footer {
+  background-color: #282a35;
+  height: 70vh;
+  color: whitesmoke;
 }
