--- a/styles.css
+++ b/styles.css
@@ -65,21 +65,30 @@ header nav ul {
 
 header nav ul li {
   display: inline;
-  padding: 8px 35px;
+  padding: 8px 29px;
 }
 header nav a {
   color: black;
   text-decoration: none;
   font-size: 18px;
 }
+
 .pinkbg {
   background-color: #ffc0c7;
   border-radius: 25px;
-  margin-right: 8px;
-  padding: 8px 16px;
+  /* margin-right: 8px; */
+  padding: 12px 16px;
   box-sizing: inherit;
   /* display: block; */
   /* box-sizing: border-box  ; */
+}
+.greenbg {
+  background-color: #04aa6d;
+  color: whitesmoke;
+  border-radius: 25px;
+  margin: 1px;
+  padding: 12px 36px;
+  /* line-height: 1.5; */
 }
 
 .first {
@@ -121,16 +130,16 @@ h1 {
   font-size: 16px;
   border-radius: 25px;
 }
-.guide{
+.guide {
   font-size: 22px;
   color: whitesmoke;
   position: relative;
-  top:225px ;
+  top: 225px;
   /* left: 0px; */
 }
 
 footer {
   background-color: #282a35;
-  height: 70vh ;
+  height: 70vh;
   color: whitesmoke;
 }
