--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,11 @@ h1 {
 header {
   background-color: whitesmoke;
   height: 75px;
-  padding: 0px 16px 0px 12px;
 }
 nav {
-  margin: 1px;
+  /* margin: 1px; */
 }
-header nav ul {
+/* header nav ul {
   padding: 24px;
   display: flex;
   justify-content: space-evenly;
@@ -78,11 +77,11 @@ header nav a {
 .pinkbg {
   background-color: #ffc0c7;
   border-radius: 25px;
-  /* margin-right: 8px; */
+  margin-right: 8px;
   padding: 12px 16px;
   box-sizing: inherit;
-  /* display: block; */
-  /* box-sizing: border-box  ; */
+  display: block;
+  box-sizing: border-box  ;
 }
 .greenbg {
   background-color: #04aa6d;
@@ -91,7 +90,6 @@ header nav a {
   margin: 1px;
   padding: 12px 36px;
   /* line-height: 1.5; */
-}
 
 .first {
   background-color: #282a35;
