--- a/styles.css
+++ b/styles.css
@@ -51,29 +51,18 @@ h1 {
   font-family: 'Fira Sans', sans-serif;
 }
 
-header {
-  background-color: whitesmoke;
-  height: 75px;
-}
-nav {
-  /* margin: 1px; */
-}
-/* header nav ul {
-  padding: 24px;
+header{
+  height: 13.5vh;
+
+ }
+
+nav{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  justify-items: center;
 }
 
-header nav ul li {
-  display: inline;
-  padding: 8px 29px;
-}
-header nav a {
-  color: black;
-  text-decoration: none;
-  font-size: 18px;
-}
-
+/*
 .pinkbg {
   background-color: #ffc0c7;
   border-radius: 25px;
